--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ strong{
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
+    margin-bottom: .5em;
     background: var(--clr-accent);
     color: var(--clr-dark);
     text-decoration: none;
